--- a/styles.css
+++ b/styles.css
@@ -98,3 +98,10 @@ input {
 hr{
 	height:2px; visibility:hidden; margin-bottom:-1px;
 }
+
+#logo {
+	position:absolute;
+	transform:translate(-50%,0);
+	right:0%;
+
+}
