--- a/xkcd/style.css
+++ b/xkcd/style.css
@@ -16,3 +16,10 @@ h1{
 p{
     font-size:20px;
 }
+
+button{
+    background-color:#FFF;
+    border:1px black;
+    height:30px;
+    font-size:18px;
+}
