--- a/xkcd/style.css
+++ b/xkcd/style.css
@@ -1,6 +1,7 @@
 .content{
     margin:auto;
     padding:10px;
+    width: 95vw;
     text-align: center;
 }
 
@@ -17,7 +18,7 @@ p{
 }
 
 #image {
-    max-width: 90%;
+    max-width: 90vw;
 }
 
 button{
